Update goods aod 포스터 연경.html

--- a/goods aod 포스터 연경.html
+++ b/goods aod 포스터 연경.html
@@ -62,7 +62,8 @@
         <p>1] 사람이 차지하는 공간은 결코 침대 한 칸뿐이 아닙니다.
           <br>방 속에 차 있는 공기, 트여있는 하늘 또한 사람이 차지할 공간입니다.
           <br>안온한 곳에 살지 못했던 시절의 공간을 재현한 포스터입니다.
-          <br>누구나 한 번쯤 마음이 안온하지 못할 때 느끼는 슬픔의 억압적 성격을 표현했습니다.</p>
+          <br>누구나 한 번쯤 마음이 안온하지 못할 때 느끼는 슬픔의 억압적 성격을 표현했습니다.
+        <br><br><br> 420*594mm / 6,000원</p>
     </div>
     <button class="back-button" onclick="goBack()">←</button>
 
