--- a/goods 다섯 번째 유서 포스터.html
+++ b/goods 다섯 번째 유서 포스터.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <h1>Goods Shop</h1>
-    <img src="goods 다섯 번째 유서 포스터.JPG" alt="유서 포스 1">
+    <img src="goods 다섯 번째 유서 포스터.JPG" alt="유서 포스터 1">
     <h2>다섯 번째 유서 포스터</h2>
     <div class="goods-description">
         <p>1] 다섯 번째 유서의 기반이 된 재수생활을 한 고시원을 그려낸 포스터입니다.
