--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -37,7 +37,7 @@
             top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            font-size: 24px;
             color: #9298cc;
             cursor: pointer;
             border: none;
@@ -70,10 +70,10 @@
             padding: 10px;
         }
         .prev {
-            left: 0;
+            left: 20px;
         }
         .next {
-            right: 0;
+            right: 20px;
         }
 
         .goods-container img {
@@ -86,33 +86,32 @@
 <body>
     <h1>Goods Shop</h1>
     <div class="goods-container">
+        <button class="back-button" onclick="goBack()">&#8592;</button>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="goods-slider">
-        <div class="goods-item">
-            <img src="goods 유서장 00.JPG" alt="유서장 1">
-        </div>
-        <div class="goods-item">
-            <img src="goods 유서장 01.JPG" alt="유서장 2">
-        </div>
-        <div class="goods-item">
-            <img src="goods 유서장 02.JPG" alt="유서장 3">
-        </div>
-        <div class="goods-item">
-            <img src="goods 유서장 03.JPG" alt="유서장 4">
-        </div>
-    </div>
-    <button class="next" onclick="nextSlide()">&#10095;</button>
-    </div>
-            <h2>유서장 2종</h2>
-            <div class="goods-description">
-                <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
-                <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
+            <div class="goods-item">
+                <img src="goods 유서장 00.JPG" alt="유서장 1">
             </div>
+            <div class="goods-item">
+                <img src="goods 유서장 01.JPG" alt="유서장 2">
+            </div>
+            <div class="goods-item">
+                <img src="goods 유서장 02.JPG" alt="유서장 3">
+            </div>
+            <div class="goods-item">
+                <img src="goods 유서장 03.JPG" alt="유서장 4">
+            </div>
+        </div>
+        <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
- 
+    <h2>유서장 2종</h2>
+    <div class="goods-description">
+        <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
+            <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
+    </div>
 
     <script>
-         let slideIndex = 1;
+        let slideIndex = 1;
 
         function showSlides() {
             const slides = document.querySelectorAll('.goods-item');
@@ -139,6 +138,10 @@
         }
 
         showSlides();
+
+        function goBack() {
+            window.history.back();
+        }
     </script>
 </body>
 </html>
