--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -96,7 +96,7 @@
                 <img src="goods 유서장 01.JPG" alt="유서장 2">
             </div>
             <div class="goods-item">
-                <img src="goods 유서장 02.JPG" alt="유서장 3">
+                <img src="goods 유서장 02.jpg" alt="유서장 3">
             </div>
             <div class="goods-item">
                 <img src="goods 유서장 03.JPG" alt="유서장 4">
