--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         #logo {
             display: block;
-            margin: 0 auto;
+            margin: 200px auto;
             text-align: center;
         }
         #description {
