--- a/goods.html
+++ b/goods.html
@@ -99,7 +99,7 @@ h1 a {
             <li><a href="authors.html">authors</a></li>
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
-            <li><a href="https://www.instagram.com/aod.inc/">instagram</a></li>
+            <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==</a></li>
             
         </ul>
     </nav>
