--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -43,9 +43,9 @@
             border: none;
             background: none;
         }
-        }
+       
         .goods-container {
-            width: 80%;
+            width: 100px;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
