--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -45,7 +45,7 @@
         }
        
         .goods-container {
-            width: 100px;
+            width: 100%;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
