--- a/goods.html
+++ b/goods.html
@@ -12,15 +12,15 @@
             text-align: left;
             margin-left: 35px
         }
-        h1 {
+       h1 {
             font-size: 48px;
             margin-top: 20px;
-            margin-left: 30px
+            margin-left: 30px;
         }
-         h2 {
+        h2 {
             font-size: 35px;
             margin-top: 20px;
-            margin-left: 35px
+            margin-left: 35px;
         }
         .goods-container {
             display: flex;
@@ -28,19 +28,17 @@
             justify-content: flex-start;
             margin-top: 20px;
         }
-    
         .goods-item {
             flex: 0 0 20%;
             max-width: 20%;
             margin: 35px;
-            text-align: left;
+            text-align: center;
             padding: 10px;
         }
-
         .goods-title {
             margin-top: 7px;
-            color: #9298cc; /* 텍스트 색상 */
-            text-decoration: none !important; /* 밑줄 제거 */
+            color: #9298cc;
+            text-decoration: none !important;
         }
         
         /* 링크 스타일 제거 및 글자 색상 지정 */
