Update goods 다섯 번째 유서 포스터.html

--- a/goods 다섯 번째 유서 포스터.html
+++ b/goods 다섯 번째 유서 포스터.html
@@ -59,7 +59,7 @@
     <img src="goods 다섯 번째 유서 포스터.JPG" alt="유서 포스터 1">
     <h2>다섯 번째 유서 포스터</h2>
     <div class="goods-description">
-        <p>1] 다섯 번째 유서의 기반이 된 재수생활을 한 고시원을 그려낸 포스터입니다.
+        <p>다섯 번째 유서의 기반이 된 재수생활을 한 고시원을 그려낸 포스터입니다.
         <br><br><br>420*594mm / 5,000원</p>
     </div>
     <button class="back-button" onclick="goBack()">←</button>
