--- a/goods.html
+++ b/goods.html
@@ -32,7 +32,7 @@
             flex: 0 0 20%;
             max-width: 20%;
             margin: 35px;
-            text-align: center;
+            text-align: left;
             padding: 10px;
         }
         .goods-title {
