--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AoD, All of Disorders</title>
+    <link rel="stylesheet" href="fonts.css">
     <style>
         body {
             background-color: #fffffa;
