--- a/authors.html
+++ b/authors.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authors</title>
+    <link rel="stylesheet" href="fonts.css">
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Constantia", "Onul 아티클 부리 Regular", sans-serif;
-            color: #9298cc;
             text-align: left;
             margin-left: 35px
         }
