--- a/book 사낚어.html
+++ b/book 사낚어.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book 사람낚는어부가되기에는낚아야할생각이너무많아만든책</title>
+    <link rel="stylesheet" href="fonts.css">
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Constantia", "Onul 아티클 부리 Regular", sans-serif;
-            color: #9298cc;
             text-align: center;
         }
         h1 {
