--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <li><a href="authors.html">authors</a></li>
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
+            <li><a href="weeklyqoutes.html">weekly quotes</a></li>
             <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
         </ul>
     </nav>
