--- a/authors.html
+++ b/authors.html
@@ -95,6 +95,7 @@ h1 a {
             <li><a href="authors.html">authors</a></li>
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
+            <li><a href="weeklyquotes.html">weekly quotes</a></li>
             <li><a href="https://www.instagram.com/aod.inc/">instagram</a></li>
             
         </ul>
