--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -91,7 +91,7 @@ h1 a {
 </head>
 <body>
     <h1><ul><li><a href="index.html">AoD, All of Disorders</a></li></ul></h1>
-    <h2>Books</h2>
+    <h2>Weekly Quotes</h2>
     
     <nav>
         <ul>
@@ -106,15 +106,15 @@ h1 a {
   
     <div class="quote-container">
         <div class="quote-item">
-            <a href="quote240420.html">
-                <img src="quote 240420 00.jpg" width="auto" height="300px" alt="quote2">
-                <p class="quote-title">2024.04.20.</p>
+            <a href="quote240422.html">
+                <img src="quote 240422 00.jpg" width="auto" height="300px" alt="quote2">
+                <p class="quote-title">2024.04.22.</p>
             </a>
         </div>
-        <div class="book-item">
+        <div class="quote-item">
             <a href="quote240420.html">
-                <img src="quote 240422 00.jpg" width="auto" height="300px" alt="quote1">
-                <p class="quote-title">2024.04.22.</p>
+                <img src="quote 240420 00.jpg" width="auto" height="300px" alt="quote1">
+                <p class="quote-title">2024.04.20.</p>
             </a>
         </div>
     </div>
