--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -31,7 +31,7 @@
         .quote-item {
             flex: 0 0 20%;
             max-width: 20%;
-            margin-left: 35px;
+            margin: 35px;
             margin-right: -20px
             text-align: left;
             padding: 10px;
