--- a/books.html
+++ b/books.html
@@ -126,7 +126,7 @@ h1 a {
         <div class="book-item">
             <a href="book 사낚어.html">
                 <img src="사낚어 00.JPG" width="300px" height="auto" alt="book4">
-                <p class="book-title">사람낚는어부가되기에는낚아야할생각이<br>너무많아만든책</p>
+                <p class="book-title">사람낚는어부가되기에는낚아야할생각이너무많아만든책</p>
             </a>
         </div>
         <div class="book-item">
