--- a/books.html
+++ b/books.html
@@ -46,6 +46,7 @@
             color: #9298cc;
             font-size: 16px; /* 텍스트 크기 조정 */
             margin: 0; /* 기본 마진 제거 */
+            box-sizing: border-box;
         }
 
         nav ul li {
