--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -70,10 +70,10 @@
             padding: 10px;
         }
         .prev {
-            left: 20px;
+            left: 0;
         }
         .next {
-            right: 20px;
+            right: 0;
         }
 
         .goods-container img {
