--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -31,18 +31,17 @@
             font-size: 13pt;
             line-height: 20pt;
         }
-             .back-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    color: #9298cc;
-    cursor: pointer;
-    border: none;
-    background: none;
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            color: #9298cc;
+            cursor: pointer;
+            border: none;
+            background: none;
         }
-       
         .goods-container {
             width: 100%;
             margin: 0 auto;
@@ -69,11 +68,14 @@
             z-index: 1;
             padding: 10px;
         }
+        .prev, .next {
+            font-family: Arial, sans-serif; /* 화살표에 폰트 적용 */
+        }
         .prev {
-            left: 0;
+            left: 5px; /* 왼쪽 여백 조정 */
         }
         .next {
-            right: 0;
+            right: 5px; /* 오른쪽 여백 조정 */
         }
 
         .goods-container img {
