--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,7 +32,7 @@
             line-height: 20pt;
         }
         .back-button {
-            position: absolute;
+            position: fixed;
             top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
