--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,8 +32,8 @@
             line-height: 20pt;
         }
         .back-button {
-            position: fixed;
-            top: 0px;
+            position: absolute;
+            top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
             font-size: 16px;
