--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -72,10 +72,10 @@
             font-family: Arial, sans-serif; /* 화살표에 폰트 적용 */
         }
         .prev {
-            left: 5px; /* 왼쪽 여백 조정 */
+            margin-left: 50px; /* 왼쪽 여백 조정 */
         }
         .next {
-            right: 5px; /* 오른쪽 여백 조정 */
+            margin-right: 50px; /* 오른쪽 여백 조정 */
         }
 
         .goods-container img {
