--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -1,3 +1,4 @@
+User
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -31,17 +32,18 @@
             font-size: 13pt;
             line-height: 20pt;
         }
-          .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            color: #9298cc;
-            cursor: pointer;
-            border: none;
-            background: none;
+             .back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #9298cc;
+    cursor: pointer;
+    border: none;
+    background: none;
         }
+       
         .goods-container {
             width: 100%;
             margin: 0 auto;
@@ -68,14 +70,11 @@
             z-index: 1;
             padding: 10px;
         }
-        .prev, .next {
-            font-family: Arial, sans-serif; /* 화살표에 폰트 적용 */
-        }
         .prev {
-            margin: 0; /* 왼쪽 여백 조정 */
+            left: 0;
         }
         .next {
-            margin: 0; /* 오른쪽 여백 조정 */
+            right: 0;
         }
 
         .goods-container img {
