--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -48,6 +48,8 @@
             position: relative;
             overflow: hidden;
             margin-top: 20px;
+            text-align: left; /* 백버튼을 좌측 상단에 정렬하기 위해 추가 */
+            padding-left: 20px; /* 백버튼과의 간격을 유지하기 위해 추가 */
         }
         .goods-slider {
             display: flex;
