--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,15 +32,15 @@
             line-height: 20pt;
         }
         .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
             font-family: Arial, sans-serif;
             font-size: 16px;
             color: #9298cc;
             cursor: pointer;
             border: none;
             background: none;
+            position: fixed;
+            top: 20px;
+            left: 20px;
         }
         .goods-container {
             width: 100%;
@@ -48,8 +48,8 @@
             position: relative;
             overflow: hidden;
             margin-top: 20px;
-            text-align: left; /* 백버튼을 좌측 상단에 정렬하기 위해 추가 */
-            padding-left: 20px; /* 백버튼과의 간격을 유지하기 위해 추가 */
+            text-align: center; /* 백버튼을 좌측 상단에 정렬하기 위해 추가 */
+            padding-left: 20px;
         }
         .goods-slider {
             display: flex;
