--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,8 @@
             background-color: #fffffa;
         }
         h1 {
-            font-size: 36px;
-            margin-left: 45px
+            font-size: 8vw;
+            margin-left: 4.5vw;
         }
         a {
             color: #9298cc;
@@ -22,44 +22,35 @@
         }
         #logo {
             display: block;
-            margin: 80px auto;
+            margin: 8vw auto;
             text-align: center;
         }
         #description {
             text-align: center;
-            margin-top: 10px;
-            font-size: 13pt;
-            line-height: 20pt;
-}
-
+            margin-top: 1vw;
+            font-size: 1.3vw;
+            line-height: 2vw;
         }
-        /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
             list-style-type: none;
             padding: 0;
-            margin-left: 31px;
+            margin-left: 3.1vw;
         }
-
         nav ul li {
             display: inline;
         }
-
         nav a {
-            text-decoration: none; /* 밑줄 제거 */
-            color: #9298cc; /* 버튼 글자색 */
-            padding: 10px; /* 버튼 간격 조절 */
+            text-decoration: none;
+            color: #9298cc;
+            padding: 1vw;
         }
-
-        /* 버튼 사이 공백 조절 */
         nav a:not(:last-child) {
-            margin-right: 20px;
+            margin-right: 2vw;
         }
-
         .logo {
-            width: 50px;
+            width: 5vw;
             height: auto;
         }
-
     </style>
 </head>
 <body>
@@ -74,7 +65,7 @@
         </ul>
     </nav>
     <div id="logo">
-        <img src="로고.jpg" alt="AoD Logo">
+        <img src="로고.jpg" alt="AoD Logo" class="logo">
     </div>
     <div id="description">
         <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
