--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -38,7 +38,7 @@
             cursor: pointer;
             border: none;
             background: none;
-            position: fixed;
+            position: absolute;
             top: 20px;
             left: 20px;
         }
@@ -62,7 +62,7 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            background-color: #fffffa;
+            background-color: none;
             border: none;
             color: #9298cc;
             font-size: 24px;
@@ -71,10 +71,10 @@
             padding: 10px;
         }
         .prev {
-            left: 0;
+            left: 10;
         }
         .next {
-            right: 0;
+            right: 10;
         }
 
         .goods-container img {
