--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -30,8 +30,8 @@
             font-size: 13pt;
             line-height: 20pt;
         }
-        .goods-button {
-            position: absolute;
+        .back-button {
+            position: fixed;
             top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
