--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -109,7 +109,7 @@
         let slideIndex = 1;
 
         function showSlides() {
-            const slides = document.querySelectorAll('.book-item');
+            const slides = document.querySelectorAll('.goods-item');
             if (slideIndex < 1) {
                 slideIndex = slides.length;
             }
