--- a/author 구채현.html
+++ b/author 구채현.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Author 구채현</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center;
