--- a/book Whats in my blue.html
+++ b/book Whats in my blue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book What's in my blue?</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #fffffa;
