--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book 다섯 번째 유서</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #fffffa;
