--- a/book 우울 파르페.html
+++ b/book 우울 파르페.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book 우울 파르페</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #fffffa;
