--- a/goods 다섯 번째 유서 포스터.html
+++ b/goods 다섯 번째 유서 포스터.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>다섯 번째 유서 poster</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #fffffa;
