--- a/goods 사낚어 스티커.html
+++ b/goods 사낚어 스티커.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사낚어 투명 리무버블 스티커 2종</title>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #fffffa;
