--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AoD, All of Disorders</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="only screen and (min-width:200px) and (max-width:300px) href="screen.css">
+    <link rel="stylesheet" media="only print and (min-width:200px) and (max-width:300px) href="print.css">
     <style>
         body {
             background-color: #fffffa;
@@ -30,9 +32,8 @@
             margin-top: 10px;
             font-size: 13pt;
             line-height: 20pt;
-}
-
         }
+
         /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
             list-style-type: none;
@@ -59,7 +60,7 @@
             width: 50px;
             height: auto;
         }
-
+        
     </style>
 </head>
 <body>
