--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,6 +22,7 @@
         }
         #logo {
             display: block;
+            margin: 80px auto;
             text-align: center;
         }
         #description {
@@ -29,13 +30,15 @@
             margin-top: 10px;
             font-size: 13pt;
             line-height: 20pt;
-        }
+}
 
+        }
         /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
             list-style-type: none;
             padding: 0;
             margin-left: 31px;
+            
         }
 
         nav ul li {
@@ -56,6 +59,18 @@
         .logo {
             width: 50px;
             height: auto;
+        }
+
+        .img_responsive {
+            width: 100%;
+            height: auto;
+            max-width: 300px;
+            min-width: 200px;
+        }
+
+        .container {
+            width: 100%;
+            height: 1000px;
         }
         
     </style>
@@ -79,3 +94,4 @@
     </div>
 </body>
 </html>
+
