--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AoD, All of Disorders</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="only screen and (min-width:400px) and (max-width:5000px)" href="screen_index.css">
     <style>
         body {
             background-color: #fffffa;
