--- a/index.html
+++ b/index.html
@@ -7,35 +7,6 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" media="only screen and (min-width:400px) and (max-width:5000px)" href="screen_index.css">
     <style>
-        body {
-            background-color: #fffffa;
-            margin: 0;
-            padding: 0;
-        }
-        h1, nav {
-            text-align: left;
-            margin-left: 45px
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-        nav a {
-            text-decoration: none;
-            color: #9298cc;
-            padding: 10px;
-        }
-        #description {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 13pt;
-            line-height: 20pt;
-        }
         .background {
             background-image: url('로고.jpg');
             background-size: cover;
@@ -55,12 +26,9 @@
             <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
         </ul>
     </nav>
-    <div style="background-image: url('로고.jpg')">
-    </div>
+    <div class="background"></div>
     <div id="description">
         <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
     </div>
-    
 </body>
 </html>
-
