--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" media="only screen and (min-width:400px) and (max-width:5000px)" href="screen_index.css">
     <style>
         .background {
+            background-color: #fffffa;
             background-image: url('로고.jpg');
             background-size: cover;
             height: 300px;
