--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         .background {
             background-color: #fffffa;
             background-image: url('로고.jpg');
-            background-size: cover;
-            height: 300px;
-            margin-top: 50px;
+            background-size: contain;
         }
     </style>
 </head>
