--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .background {
             background-color: #fffffa;
             background-image: url('로고.jpg');
-            background-size: contain;
+            background-size: cover;
         }
     </style>
 </head>
