--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
         </ul>
     </nav>
-    <div class="background"></div>
+    <div class="background">
+    </div>
     <div id="description">
         <p style="text-align:center">각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
     </div>
