--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         .background {
             background-color: #fffffa;
-            background-image: url('로고.jpg');
+            background-image: url('logo.jpg');
             background-size: cover;
         }
     </style>
