--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AoD, All of Disorders</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" media="only screen and (min-width:400px) and (max-width:5000px)" href="screen_index.css">
+    <link rel="stylesheet" href="fonts.css">
     <style>
-        .background {
+        body {
             background-color: #fffffa;
-            background-image: url('logo.jpg');
-            background-size: cover;
+        }
+        h1 {
+            font-size: 36px;
+            margin-left: 45px
+        }
+        a {
+            color: #9298cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: none;
+        }
+        #logo {
+            display: block;
+            margin: 80px auto;
+            text-align: center;
+        }
+        #description {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 13pt;
+            line-height: 20pt;
+}
+        }
+        /* 링크 스타일 제거 및 글자 색상 지정 */
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin-left: 31px;
+        }
+        nav ul li {
+            display: inline;
+        }
+        nav a {
+            text-decoration: none; /* 밑줄 제거 */
+            color: #9298cc; /* 버튼 글자색 */
+            padding: 10px; /* 버튼 간격 조절 */
+        }
+        /* 버튼 사이 공백 조절 */
+        nav a:not(:last-child) {
+            margin-right: 20px;
+        }
+        .logo {
+            width: 50px;
+            height: auto;
         }
     </style>
 </head>
@@ -25,10 +68,11 @@
             <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
         </ul>
     </nav>
-    <div class="background">
+    <div id="logo">
+        <img src="로고.jpg" alt="AoD Logo">
     </div>
     <div id="description">
-        <p style="text-align:center">각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
+        <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
     </div>
 </body>
 </html>
