--- a/goods.html
+++ b/goods.html
@@ -1,4 +1,3 @@
-User
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -34,11 +33,21 @@ User
             margin: 35px;
             text-align: left;
             padding: 10px;
+            box-sizing: border-box; /* 요소의 폭과 높이에 padding과 border를 포함하도록 설정 */
         }
+
+        .goods-item img {
+            width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: auto; /* 이미지의 세로 비율을 유지함 */
+            display: block; /* 이미지를 블록 요소로 설정하여 수직 정렬이 제대로 이루어지도록 함 */
+            margin-bottom: 10px; /* 이미지 아래 여백 추가 */
+        }
+        
         .goods-title {
-            margin-top: 7px;
-            color: #9298cc;
-            text-decoration: none !important;
+             color: #9298cc;
+            font-size: 16px; /* 텍스트 크기 조정 */
+            margin: 0; /* 기본 마진 제거 */
+            box-sizing: border-box;
         }
         
         /* 링크 스타일 제거 및 글자 색상 지정 */
