--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -16,7 +16,7 @@
             top: 20px
         }
          h2 {
-            font-size: 18px;
+            font-size: 20px;
             position: center;
             top: 20px
         }
@@ -31,7 +31,7 @@
             line-height: 20pt;
         }
         .back-button {
-            position: fixed;
+            position: absolute;
             top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
             background: none;
         }
         .goods-container {
-            width: 80%;
+            width: 100px;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
