--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -80,34 +80,19 @@
 <body>
    <h1>Goods Shop</h1>
     <div class="goods-container">
-        <button class="back-button" onclick="goBack()">&#8592;</button>
+        <button class="back-button" onclick="goBack()" style="position: absolute; top: 0; left: 0;">&#8592;</button>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="goods-slider">
             <div class="goods-item">
-                <img src="goods 유서장 00.JPG" alt="유서장 1">
-            </div>
-            <div class="goods-item">
-                <img src="goods 유서장 01.JPG" alt="유서장 2">
-            </div>
-            <div class="goods-item">
-                <img src="goods 유서장 02.jpg" alt="유서장 3">
-            </div>
-            <div class="goods-item">
-                <img src="goods 유서장 03.JPG" alt="유서장 4">
+                <h2>유서장 2종</h2>
+                <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
+                    <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
             </div>
         </div>
-        <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
-       <h2>유서장 2종</h2>
-    <div class="goods-description">
-        <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
-            <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
-    </div>
-    
 
     <script>
         let slideIndex = 1;
-
         function showSlides() {
             const slides = document.querySelectorAll('.goods-item');
             if (slideIndex < 1) {
@@ -121,19 +106,15 @@
             });
             slides[slideIndex - 1].style.display = 'block';
         }
-
         function prevSlide() {
             slideIndex--;
             showSlides();
         }
-
         function nextSlide() {
             slideIndex++;
             showSlides();
         }
-
         showSlides();
-
         function goBack() {
             window.history.back();
         }
