--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goods 유서장</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css">
     <style>
         body {
             background-color: #fffffa;
             text-align: center;
         }
-          h1 {
+        h1 {
             font-size: 25px;
             position: center;
             top: 20px
         }
          h2 {
-            font-size: 20px;
+            font-size: 18px;
             position: center;
             top: 20px
         }
@@ -31,7 +31,7 @@
             line-height: 20pt;
         }
         .back-button {
-            position: absolute;
+            position: fixed;
             top: 20px;
             left: 20px;
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
             background: none;
         }
         .goods-container {
-            width: 100px;
+            width: 80%;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
@@ -80,20 +80,34 @@
 <body>
    <h1>Goods Shop</h1>
     <div class="goods-container">
-        <button class="back-button" onclick="goBack()" style="position: absolute; top: 0; left: 0;">&#8592;</button>
+        <button class="back-button" onclick="goBack()">&#8592;</button>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="goods-slider">
             <div class="goods-item">
-                <h2>유서장 2종</h2>
-                <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
-                    <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
+                <img src="goods 유서장 00.JPG" alt="유서장 1">
+            </div>
+            <div class="goods-item">
+                <img src="goods 유서장 01.JPG" alt="유서장 2">
+            </div>
+            <div class="goods-item">
+                <img src="goods 유서장 02.jpg" alt="유서장 3">
+            </div>
+            <div class="goods-item">
+                <img src="goods 유서장 03.JPG" alt="유서장 4">
             </div>
         </div>
+        <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
-
+       <h2>유서장 2종</h2>
+    <div class="goods-description">
+        <p>자신의 괴로움을 글로 적어 털어낼 수 있는 작은 유서장(엽서).
+            <br><br><br>148*210mm / 2종 / 1 장 1,500원</p>
+    </div>
     <script>
         let slideIndex = 1;
+
         function showSlides() {
+            const slides = document.querySelectorAll('.book-item');
             const slides = document.querySelectorAll('.goods-item');
             if (slideIndex < 1) {
                 slideIndex = slides.length;
