--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,8 +32,8 @@
         }
         .back-button {
             position: fixed;
-            top: 20px;
-            left: 20px;
+            top: 0;
+            left: 0;
             font-family: Arial, sans-serif;
             font-size: 16px;
             color: #9298cc;
