--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -34,6 +34,7 @@
             position: fixed;
             top: 0;
             left: 0;
+            z-index: 2;
             font-family: Arial, sans-serif;
             font-size: 16px;
             color: #9298cc;
