--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,8 +32,8 @@
         }
         .back-button {
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 5px;
+            left: 5px;
             z-index: 2;
             font-family: Arial, sans-serif;
             font-size: 16px;
