--- a/goods 유서장.html
+++ b/goods 유서장.html
@@ -32,8 +32,8 @@
         }
         .back-button {
             position: fixed;
-            top: 1%;
-            left: 3%;
+            top: 20px;
+            left: 20px;
             z-index: 2;
             font-family: Arial, sans-serif;
             font-size: 16px;
