--- a/quote240422.html
+++ b/quote240422.html
@@ -25,6 +25,7 @@
         img {
             max-width: 40%;
             height: auto;
+            position: center;
             margin-top: 20px;
         }
 
