--- a/quote240422.html
+++ b/quote240422.html
@@ -26,7 +26,7 @@
             max-width: 40%;
             height: auto;
             position: center;
-            margin-top: 20px;
+            top: 20px;
         }
 
         .back-button {
