--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -28,11 +28,10 @@
             margin-top: 20px;
         }
     
-        .quote-item {
+      .quote-item {
             flex: 0 0 20%;
             max-width: 20%;
-            margin: 35px;
-            margin-right: -20px
+            margin: 15px; /* 간격을 15px로 조정 */
             text-align: left;
             padding: 10px;
         }
