--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -38,8 +38,8 @@
         }
 
          .quote-item img {
-            width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
-            height: auto; /* 이미지의 세로 비율을 유지함 */
+            width: auto; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: 100%; /* 이미지의 가로 비율을 유지함 */
             display: block; /* 이미지를 블록 요소로 설정하여 수직 정렬이 제대로 이루어지도록 함 */
             margin-bottom: 10px; /* 이미지 아래 여백 추가 */
         }
