--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -30,7 +30,7 @@
     
       .quote-item {
             flex: 0 0 20%;
-            max-width: 20%;
+            max-height: 20%;
             margin: 35px;
             text-align: left;
             padding: 10px;
