--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -32,7 +32,7 @@
             flex: 0 0 20%;
             max-width: 20%;
             margin: 35px;
-            margin-right: 10px
+            margin-right: 0;
             text-align: left;
             padding: 10px;
         }
