--- a/book Whats in my blue.html
+++ b/book Whats in my blue.html
@@ -129,13 +129,22 @@
                 <img src="whats in my blue 00.jpg" alt="whats in my blue 00"  onclick="openModal('whats in my blue 00.jpg')">
             </div>
             <div class="book-item">
-                <img src="whats in my blue 01.jpg" alt="whats in my blue 01" onclick="openModal('whats in my blue 01.jpg')">
+                <img src="whats in my blue 01.JPG" alt="whats in my blue 01" onclick="openModal('whats in my blue 01.JPG')">
             </div>
             <div class="book-item">
-                <img src="whats in my blue 02.jpg" alt="whats in my blue 02" onclick="openModal('whats in my blue 02.jpg')">
+                <img src="whats in my blue 02.JPG" alt="whats in my blue 02" onclick="openModal('whats in my blue 02.JPG')">
             </div>
             <div class="book-item">
-                <img src="whats in my blue 03.jpg" alt="whats in my blue 03" onclick="openModal('whats in my blue 03.jpg')">
+                <img src="whats in my blue 03.JPG" alt="whats in my blue 03" onclick="openModal('whats in my blue 03.JPG')">
+            </div>
+            <div class="book-item">
+                <img src="whats in my blue 04.JPG" alt="whats in my blue 03" onclick="openModal('whats in my blue 04.JPG')">
+            </div>
+            <div class="book-item">
+                <img src="whats in my blue 05.JPG" alt="whats in my blue 03" onclick="openModal('whats in my blue 05.JPG')">
+            </div>
+            <div class="book-item">
+                <img src="whats in my blue 06.JPG" alt="whats in my blue 03" onclick="openModal('whats in my blue 06.JPG')">
             </div>
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
