--- a/goods 우울증 엽서.html
+++ b/goods 우울증 엽서.html
@@ -56,7 +56,7 @@
 <body>
     <h1>Goods Shop</h1>
     <img src="goods 우울증 엽서 00.jpg" alt="우울증 엽서">
-    <h2>우울증 엽서 5</h2>
+    <h2>우울증 엽서 5종</h2>
     <div class="goods-description">
         <p>[우울증]의 일러스트로 만든 엽서 5종.
         <br><br><br>150*100mm / 1장 1,500원</p>
