--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -97,6 +97,12 @@ h1 a {
     </nav>
   
     <div class="quote-container">
+         <div class="quote-item">
+            <a href="quote240429.html">
+                <img src="quote 240429 00.jpg" width="auto" height="300px" alt="quote3">
+                <p class="quote-title">2024.04.29.</p>
+            </a>
+        </div>
         <div class="quote-item">
             <a href="quote240422.html">
                 <img src="quote 240422 00.jpg" width="auto" height="300px" alt="quote2">
