--- a/quote240422.html
+++ b/quote240422.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Quote</title>
-    </title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -55,6 +54,10 @@
     <h1>Weekly Quote</h1>
     <img src="quote 240422 01.jpg" alt="240422">
     <h2>2024.04.22.</h2>
+
+    <audio controls loop autoplay>
+        <source src="240422.mp3" type="audio/mpeg">
+    </audio>
 
     <button class="back-button" onclick="goBack()">←</button>
 
