--- a/quote240422.html
+++ b/quote240422.html
@@ -47,6 +47,9 @@
             width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
             height: auto; /* 이미지의 세로 비율을 유지함 */
         }
+         audio {
+            display: none;
+        }
 
     </style>
 </head>
