--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
             <li><a href="weeklyquotes.html">weekly quotes</a></li>
-            <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
+            <li><a href="https://www.instagram.com/aod.co_/">instagram</a></li>
         </ul>
     </nav>
     <div id="logo">
