--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -91,7 +91,7 @@ h1 a {
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
             <li><a href="weeklyquotes.html">weekly quotes</a></li>
-            <li><a href="https://www.instagram.com/aod.inc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">instagram</a></li>
+            <li><a href="https://www.instagram.com/aod.co_/">instagram</a></li>
             
         </ul>
     </nav>
