--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,9 +30,7 @@
             margin-top: 10px;
             font-size: 13pt;
             line-height: 20pt;
-}
         }
-        /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
             list-style-type: none;
             padding: 0;
@@ -43,17 +40,24 @@
             display: inline;
         }
         nav a {
-            text-decoration: none; /* 밑줄 제거 */
-            color: #9298cc; /* 버튼 글자색 */
-            padding: 10px; /* 버튼 간격 조절 */
+            text-decoration: none;
+            color: #9298cc;
+            padding: 10px;
         }
-        /* 버튼 사이 공백 조절 */
         nav a:not(:last-child) {
             margin-right: 20px;
         }
         .logo {
             width: 50px;
             height: auto;
+        }
+        /* Footer 스타일 */
+        footer {
+            text-align: center;
+            margin-top: 50px; /* 페이지 맨 아래에서의 여백 조절 */
+            padding: 20px 0; /* 푸터 내부 여백 조절 */
+            color: #9298cc;
+            background-color: none; /* 푸터 배경색 */
         }
     </style>
 </head>
@@ -74,5 +78,10 @@
     <div id="description">
         <p style="text-align:center">각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
     </div>
+
+    <footer>
+        Copyright 2024. AoD Co. All rights reserved.
+    </footer>
 </body>
 </html>
+
