--- a/goods.html
+++ b/goods.html
@@ -94,7 +94,13 @@ h1 a {
     color: #9298cc; /* 텍스트 색상 변경 */
     /* 다른 원하는 스타일 추가 */
 }
-        
+     footer {
+            text-align: center;
+            margin-top: 50px; /* 페이지 맨 아래에서의 여백 조절 */
+            padding: 20px 0; /* 푸터 내부 여백 조절 */
+            color: #9298cc;
+            background-color: none; /* 푸터 배경색 */
+        }     
     </style>
 </head>
 <body>
@@ -150,5 +156,8 @@ h1 a {
             </a>
         </div>
     </div>
+    <footer>
+        Copyright 2024. AoD Co. All rights reserved.
+    </footer>
 </body>
 </html>
