--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         }
         h1 {
             font-size: 36px;
+            margin-left: 45px
         }
         a {
             color: #9298cc;
