--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -110,7 +110,7 @@
     <div class="quote-container">
         <div class="quote-item">
             <a href="quote240526.html">
-                <img src="quote 240526 00.jpg" width="auto" height="300px" alt="quote4">
+                <img src="quote 240526 00.jpeg" width="auto" height="300px" alt="quote4">
                 <p class="quote-title">2024.05.26.</p>
             </a>
         </div>
