--- a/weeklyquotes.html
+++ b/weeklyquotes.html
@@ -25,7 +25,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 70px;
-            margin-top: 20px;
+            margin: 20px 35px 0 35px; /* 컨테이너 양 옆에 35px 마진 설정 */
         }
     
         .quote-item {
